Fix titledpane styling in dark mode

--- a/app/src/main/resources/edu/wpi/first/shuffleboard/app/dark.css
+++ b/app/src/main/resources/edu/wpi/first/shuffleboard/app/dark.css
@@ -109,6 +109,16 @@
 
 /*******************************************************************************
  *                                                                             *
+ * Titled pane                                                                 *
+ *                                                                             *
+ ******************************************************************************/
+.titled-pane > .title {
+    -fx-background-color: -swatch-light-gray;
+    -fx-text-fill: #eeeeee;
+}
+
+/*******************************************************************************
+ *                                                                             *
  * Tree table, table view                                                      *
  *                                                                             *
  ******************************************************************************/
